adjust arrow on main landing page

--- a/css/sass/components/_buttons.scss
+++ b/css/sass/components/_buttons.scss
@@ -15,7 +15,7 @@
   padding: 0 20px;
   text-align: center;
   text-decoration: none;
-  border-radius: 25px;
+  // border-radius: 25px;
   transition: background 1s;
   font-family: $bold;
 
