--- a/css/main.css
+++ b/css/main.css
@@ -764,7 +764,6 @@ html.fp-enabled,
   padding: 0 20px;
   text-align: center;
   text-decoration: none;
-  border-radius: 25px;
   -webkit-transition: background 1s;
   transition: background 1s;
   font-family: proxima_bold, sans-serif; }
@@ -1150,7 +1149,8 @@ html.fp-enabled,
   left: 1%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  width: 10px; }
+  width: 10px;
+  opacity: 0.25; }
 
 /* Larger than phablet */
 @media (min-width: 550px) {
@@ -1215,7 +1215,8 @@ html.fp-enabled,
 .prototype-container {
   background: #E94444; }
   .prototype-container h1 {
-    font-size: 2.4em; }
+    font-size: 2.4em;
+    text-transform: uppercase; }
   .prototype-container p {
     color: #FEFEE6;
     margin-bottom: 15px; }
