--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -41,8 +41,10 @@ $light-salmon: #f56d6f;
 $light-red: #FF4533;
 
 /* chatbot blue colors */
-$chatbot-primary: #3887BE;
+$chatbot-primary: #749CD1;
+// $chatbot-primary: #3887BE;
 // $chatbot-primary: #53657f;
+
 $chatbot-secondary: #1477AF;
 $chatbot-third: #1D364C;
 $chatbot-red: #FF7668;
