--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -45,10 +45,13 @@ $chatbot-primary: #749CD1;
 // $chatbot-primary: #3887BE;
 // $chatbot-primary: #53657f;
 
-$chatbot-secondary: #1477AF;
-$chatbot-third: #1D364C;
+$chatbot-secondary: #394C88;
+// $chatbot-secondary: #1477AF;
+$chatbot-third: #50659B;
 $chatbot-red: #FF7668;
 $chatbot-pink: #e85998;
+
+394C88
 
 html {
 	background: $aqua-blue;
