--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -156,9 +156,9 @@
 	// 	}
 	// }
 	#bodymovin-prototype {
-		width: 1000px;
+		width: 400px;
 		display: none;
-		background: green;
+		margin-left: 20px;
 	}
 }
 
