--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -17,7 +17,7 @@ $margin-bottom: 60px;
 $margin-top: 35px;
 
 
-/* project colors - this project colors need assigned to these variables once you comfirm color scheme */
+/* project colors -  */
 
 $reverse: #FEFEE6;
 
@@ -50,8 +50,6 @@ $chatbot-secondary: #394C88;
 $chatbot-third: #50659B;
 $chatbot-red: #FF7668;
 $chatbot-pink: #e85998;
-
-394C88
 
 html {
 	background: $aqua-blue;
