--- a/css/main.css
+++ b/css/main.css
@@ -1120,6 +1120,21 @@ html.fp-enabled,
   right: 0;
   z-index: -1; }
 
+.down-arrow-container {
+  position: absolute;
+  top: 50%;
+  left: 1%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 10px;
+  height: 50px;
+  overflow: hidden; }
+  .down-arrow-container .down-arrow {
+    width: 1px;
+    height: 40px;
+    background: #E94444;
+    opacity: 0.5; }
+
 /* Homepage - Main Laning page */
 /**
 	 MIAN LANDING SECTION
@@ -1145,15 +1160,6 @@ html.fp-enabled,
 .main-landing-page .landing-header h3 {
   font-family: proxima_light, sans-serif;
   color: #E94444; }
-
-.main-landing-page .down-arrow {
-  position: absolute;
-  top: 50%;
-  left: 1%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 10px;
-  opacity: 0.25; }
 
 /* Larger than phablet */
 @media (min-width: 550px) {
