--- a/css/main.css
+++ b/css/main.css
@@ -1845,6 +1845,13 @@ html.fp-enabled,
 .tandem-final-design {
   background: #e4ecf1; }
 
+.te-awe {
+  background: #fff; }
+  .te-awe a {
+    text-decoration: none;
+    font-family: proxima_bold, sans-serif;
+    color: #E94444; }
+
 .ui-intro-wrapper h1,
 .ui-intro-wrapper h2,
 .ui-intro-wrapper h3,
